# Compactor

./: Cargo.toml  LICENSE.txt
.github/workflows/: rust.yml
src/: backend.rs  gui.rs
src/ui/: app.js  index.html  style.css
