[package]
name = "compactor"
version = "0.10.1"
authors = ["Thomas Hurst <tom@hur.st>"]
homepage = "https://github.com/Freaky/Compactor"
description = "An interface to Windows 10 filesystem compression"
edition = "2021"
license = "MIT"

[dependencies]
backtrace = "0.3.32"
compresstimator = { git = "https://github.com/Jordonbc/compresstimator.git", rev = "26ddd3f499bc46f2c8b3ce814e9723ed41b47919" }
crossbeam-channel = "0.5"
ctrlc = "3.1"
directories = "5.0.1"
dirs-sys = "0.4.1"
filesize = "0.2"
fs2 = "0.4.3"
glob = "0.3"
globset = "0.4"
hashfilter = { path = "hashfilter" }
humansize = "2.1.3"
lazy_static = "1.4.0"
open = "5.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
siphasher = "1.0.1"
walkdir = "2.3"
web-view = "0.7.3"
winapi = { version = "0.3.7", features = [ "combaseapi", "ioapiset", "knownfolders", "shellscalingapi", "shlobj", "shtypes", "winbase", "winerror", "winioctl", "winver"] }
filetime = "0.2.8"
tinyfiledialogs = "3.3.10"
wfd = "0.1.6"
windows-sys = "0.59.0"

[[bin]]
name = "Compactor"
path = "src/main.rs"

[build-dependencies]
vergen = "3"
winres = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = false

[dev-dependencies]
tempfile = "3.13.0"

[workspace]
members = [
  "hashfilter"
]
